--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
             - name: Install dependencies
               run: npm ci
             - name: Build project
-              run: npm run build -- --prod
+              run: npm run build
 
     firebase-deploy:
         name: Deploy
