--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,8 @@ jobs:
         needs: build
         runs-on: ubuntu-latest
         steps:
+            - name: Checkout to master
+              uses: actions/checkout@master
             - name: Get build artifacts
               uses: actions/download-artifact@v3
               with:
